# GrokSearch

./: README.md  pyproject.toml
docs/: README_EN.md
skills/grok-search-client/: SKILL.md
skills/grok-search-client/scripts/: run_search.py
src/grok_search/: __init__.py  app.py  cli.py  config.py  server.py  utils.py
src/grok_search/providers/: grok.py
